[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/Sprite-0005.png" type="Texture" id=1]
[ext_resource path="res://all/act/chef.gd" type="Script" id=2]
[ext_resource path="res://assets/Sprite-chef_3.png" type="Texture" id=3]
[ext_resource path="res://assets/Sprite-chef_5.png" type="Texture" id=4]
[ext_resource path="res://assets/Sprite-chef_6.png" type="Texture" id=5]
[ext_resource path="res://assets/floaty_64.png" type="Texture" id=6]
[ext_resource path="res://Music/ES_Vanish Whoosh Appear 1 - SFX Producer.mp3" type="AudioStream" id=7]
[ext_resource path="res://Music/ES_Anchor Throw Lake 2 - SFX Producer.mp3" type="AudioStream" id=8]

[sub_resource type="ImageTexture" id=5]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 30 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 12.8572, 22.8571 )

[sub_resource type="CanvasItemMaterial" id=12]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 7
particles_anim_v_frames = 7
particles_anim_loop = false

[sub_resource type="Gradient" id=13]
offsets = PoolRealArray( 0.621212, 1 )
colors = PoolColorArray( 0.871094, 0.572825, 0.309647, 1, 0.40242, 0.491122, 0.873047, 1 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 13 )

[sub_resource type="ParticlesMaterial" id=10]
emission_shape = 1
emission_sphere_radius = 3.0
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 180.0
gravity = Vector3( 0, -100, 0 )
initial_velocity = 50.0
initial_velocity_random = 0.1
angular_velocity = 52.98
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 256.1
color_ramp = SubResource( 11 )
hue_variation = 0.84
hue_variation_random = 0.06
anim_speed = 0.5

[sub_resource type="Animation" id=15]
resource_name = "IDLE"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Idle:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Idle:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Move:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Swim:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Throw:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Idle2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=14]
resource_name = "Parachute"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Idle2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Idle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Idle:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Throw:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.0300941 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Swim:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.0300941 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Move:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.0300941 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Move:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Move:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Swim:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Idle:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Idle:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Throw:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Swim:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Throw:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Swim:region_enabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Idle2:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=17]
resource_name = "Run"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Move:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Swim:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Idle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Move:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Idle2:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=18]
resource_name = "Swim"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Swim:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Swim:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Throw:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Idle:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Move:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Idle2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=19]
resource_name = "Throw"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Throw:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Throw:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Swim:region_enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Move:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Idle:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Idle2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 10, 31.4286 )

[node name="Chef" type="KinematicBody2D"]
position = Vector2( 5, -29 )
scale = Vector2( 0.7, 0.7 )
z_index = 10
collision_layer = 2
script = ExtResource( 2 )

[node name="Idle" type="Sprite" parent="."]
visible = false
position = Vector2( -5.71429, 10 )
scale = Vector2( 1.875, 1.875 )
texture = ExtResource( 3 )
hframes = 6
region_enabled = true
region_rect = Rect2( 0.350006, 2.674, 187.571, 33.25 )

[node name="Move" type="Sprite" parent="."]
visible = false
scale = Vector2( 1.97059, 1.97059 )
texture = ExtResource( 1 )
hframes = 6
region_enabled = true
region_rect = Rect2( 8, -10, 192, 53 )
region_filter_clip = true

[node name="Swim" type="Sprite" parent="."]
visible = false
position = Vector2( -4, 11 )
scale = Vector2( 1.97059, 1.97059 )
texture = ExtResource( 4 )
normal_map = SubResource( 5 )
hframes = 6
region_rect = Rect2( -1.0638, -3.00472, 208.16, 39.9484 )
region_filter_clip = true

[node name="Throw" type="Sprite" parent="."]
visible = false
position = Vector2( -5, 10 )
scale = Vector2( 1.97059, 1.97059 )
texture = ExtResource( 5 )
hframes = 3
region_enabled = true
region_rect = Rect2( -3.66452, -10.944, 100.482, 57.765 )
region_filter_clip = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -7.14286, 10 )
z_index = 100
shape = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -7.14286, 17.1428 )
scale = Vector2( 0.999999, 0.999999 )
shape = SubResource( 8 )

[node name="chef_particle" type="Particles2D" parent="."]
material = SubResource( 12 )
position = Vector2( -13.75, 11.25 )
rotation = -1.83259
scale = Vector2( 2, 2 )
emitting = false
amount = 30
one_shot = true
explosiveness = 0.55
local_coords = false
process_material = SubResource( 10 )
texture = ExtResource( 6 )

[node name="Idle2" type="Sprite" parent="."]
position = Vector2( -5.71429, -57.1429 )
scale = Vector2( 1.875, 1.875 )
texture = ExtResource( 3 )
hframes = 6
frame = 5
region_enabled = true
region_rect = Rect2( 0.667282, 0, 191.013, 42.4837 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Run"
anims/IDLE = SubResource( 15 )
anims/Parachute = SubResource( 14 )
anims/RESET = SubResource( 16 )
anims/Run = SubResource( 17 )
anims/Swim = SubResource( 18 )
anims/Throw = SubResource( 19 )

[node name="para_area" type="Area2D" parent="."]
position = Vector2( 0, 1.42857 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="para_area"]
modulate = Color( 0.788235, 0.0941176, 0.0941176, 1 )
position = Vector2( -7.14286, 8.57142 )
shape = SubResource( 20 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 1.42857, 1.42857 )
stream = ExtResource( 7 )
volume_db = -1.748
area_mask = 0

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
area_mask = 0

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_Area2D_body_shape_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="para_area" to="." method="_on_para_area_area_entered"]
[connection signal="body_shape_entered" from="para_area" to="." method="_on_para_area_body_shape_entered"]
